force-app/main/default/objects/Opportunity/fields/unidad_superficie_urbanizada__c.field-meta.xml
<CustomField>
    <fullName>unidad_superficie_urbanizada__c</fullName>
    <label>Unidad superficie urbanizada</label>
    <length>30</length>
    <type>Text</type>
</CustomField>