force-app/main/default/objects/Opportunity/fields/unidad_superficieonstruida__c.field-meta.xml
<CustomField>
    <fullName>unidad_superficieonstruida__c</fullName>
    <label>Unidad superficie construida</label>
    <length>30</length>
    <type>Text</type>
</CustomField>