force-app/main/default/objects/Opportunity/fields/Valid_Perdida__c.field-meta.xml
<CustomField>
    <fullName>Valid_Perdida__c</fullName>
    <formula>ISBLANK(TEXT( Loss_Reason__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valid. Perdida</label>
    <type>Checkbox</type>
</CustomField>