force-app/main/default/objects/Opportunity/fields/Validar_Raz_n_adicional__c.field-meta.xml
<CustomField>
    <fullName>Validar_Raz_n_adicional__c</fullName>
    <formula>ISBLANK( Detalle_de_P_rdida__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Validar Razón adicional</label>
    <type>Checkbox</type>
</CustomField>