force-app/main/default/objects/Opportunity/fields/ValorProyecto__c.field-meta.xml
<CustomField>
    <fullName>ValorProyecto__c</fullName>
    <label>Valor Tentativo del Proyecto</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>