force-app/main/default/objects/Opportunity/recordTypes/Convenios.recordType-meta.xml
<RecordType>
    <fullName>Convenios</fullName>
    <active>true</active>
    <businessProcess>Oportunidad</businessProcess>
    <description>Gestión de convenios</description>
    <label>Convenios</label>
</RecordType>