force-app/main/default/objects/Opportunity/recordTypes/Especificaci_n.recordType-meta.xml
<RecordType>
    <fullName>Especificaci_n</fullName>
    <active>true</active>
    <businessProcess>Oportunidad</businessProcess>
    <description>Gestión de proyectos de especificación</description>
    <label>Especificación</label>
</RecordType>