force-app/main/default/objects/Opportunity/recordTypes/Especificaci_n_Obra_Privada.recordType-meta.xml
<RecordType>
    <fullName>Especificaci_n_Obra_Privada</fullName>
    <active>false</active>
    <businessProcess>Oportunidad</businessProcess>
    <description>Proyecto Especificación</description>
    <label>Especificación Obra Privada</label>
</RecordType>