force-app/main/default/objects/Opportunity/recordTypes/Especificacion_Obra.recordType-meta.xml
<RecordType>
    <fullName>Especificacion_Obra</fullName>
    <active>false</active>
    <businessProcess>Oportunidad</businessProcess>
    <description>Proyectos de especificación</description>
    <label>Especificación Obra</label>
</RecordType>