force-app/main/default/objects/Opportunity/recordTypes/Oportunidad.recordType-meta.xml
<RecordType>
    <fullName>Oportunidad</fullName>
    <active>true</active>
    <businessProcess>Oportunidad</businessProcess>
    <description>Estandar</description>
    <label>Oportunidad</label>
</RecordType>