force-app/main/default/objects/Opportunity/recordTypes/Oportunidad_BIMSA.recordType-meta.xml
<RecordType>
    <fullName>Oportunidad_BIMSA</fullName>
    <active>true</active>
    <businessProcess>BIMSA</businessProcess>
    <label>Oportunidad BIMSA</label>
</RecordType>