force-app/main/default/objects/Opportunity/recordTypes/Proyectos_Gobierno.recordType-meta.xml
<RecordType>
    <fullName>Proyectos_Gobierno</fullName>
    <active>true</active>
    <businessProcess>Oportunidad</businessProcess>
    <description>Gestión de licitaciones Gobierno</description>
    <label>Proyectos Gobierno</label>
</RecordType>