force-app/main/default/objects/Opportunity/listViews/Copia_de_Oportunidades_Abiertas_Chihuahua.listView-meta.xml
<ListView>
    <fullName>Copia_de_Oportunidades_Abiertas_Chihuahua</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>Total_sin_Impuesto__c</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <columns>OPPORTUNITY.LAST_ACTIVITY</columns>
    <columns>IMP_SemaforoProbabilidad__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>equals</operation>
        <value>cuernava</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>notEqual</operation>
        <value>Ganada,Perdida</value>
    </filters>
    <label>Oportunidades Abiertas Cuernavaca</label>
    <sharedTo>
        <role>Gerente_Nacional_de_Ventas</role>
        <role>Jefes_de_Tienda</role>
    </sharedTo>
</ListView>