force-app/main/default/objects/Opportunity/listViews/Creados_por_Call_Center.listView-meta.xml
<ListView>
    <fullName>Creados_por_Call_Center</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>IMP_SemaforoProbabilidad__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATEDBY_USER.ALIAS</field>
        <operation>equals</operation>
        <value>CallCent</value>
    </filters>
    <label>Creados por Call Center</label>
    <sharedTo>
        <role>Asesor_de_Call_Center</role>
        <role>Coordinador_Distribuidores</role>
    </sharedTo>
</ListView>