force-app/main/default/objects/Opportunity/listViews/MyOpportunities.listView-meta.xml
<ListView>
    <fullName>MyOpportunities</fullName>
    <columns>Revisado__c</columns>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>PrecioTotal__c</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <columns>IMP_SemaforoProbabilidad__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>equals</operation>
        <value>Prospección,Evaluación Técnica,Cotización presentada,Primera revisión,Negociación,Segunda Revisión,Orden de Compra,Pendiente de Pago</value>
    </filters>
    <label>Mis Oportunidades Abiertas</label>
</ListView>