force-app/main/default/objects/Opportunity/listViews/Oportunidades_Abiertas.listView-meta.xml
<ListView>
    <fullName>Oportunidades_Abiertas</fullName>
    <columns>Revisado__c</columns>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>Total_sin_Impuesto__c</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <columns>OPPORTUNITY.LAST_ACTIVITY</columns>
    <columns>IMP_SemaforoProbabilidad__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>notEqual</operation>
        <value>Ganada,Perdida</value>
    </filters>
    <filters>
        <field>CORE.USERS.LAST_NAME</field>
        <operation>equals</operation>
        <value>Cancún</value>
    </filters>
    <label>Oportunidades Abiertas Cancún</label>
    <sharedTo>
        <role>Gerente_Nacional_de_Ventas</role>
        <role>Jefes_de_Tienda</role>
    </sharedTo>
</ListView>