force-app/main/default/objects/Opportunity/listViews/Oportunidades_Abiertas_Este_Mes_Admin.listView-meta.xml
<ListView>
    <fullName>Oportunidades_Abiertas_Este_Mes_Admin</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>Importe__c</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>equals</operation>
        <value>Prospección,Evaluación Técnica,Cotización presentada,Primera revisión,Negociación,Segunda Revisión,Pendiente de Pago</value>
    </filters>
    <filters>
        <field>IMP_FechaCierreEsteMes1__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Oportunidades Abiertas Este Mes Admin</label>
</ListView>